--- a/crowsoftmvc/Views/Shared/_Layout.cshtml
+++ b/crowsoftmvc/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - crowsoftmvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - CrowSoft Technologies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
