--- a/crowsoftmvc/Views/UserAccounts/Create.cshtml
+++ b/crowsoftmvc/Views/UserAccounts/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Register User</h1>
+<h1>Create</h1>
 
 <h4>UserAccount</h4>
 <hr />
@@ -45,8 +45,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="County" class="control-label"></label>
-                <input asp-for="County" class="form-control" />
-                <span asp-validation-for="County" class="text-danger"></span>
+                <div class="col-md-10">
+                    <select asp-for="County" asp-items="Model.CountiesList"></select>
+                </div>
+                   <span asp-validation-for="County" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Country" class="control-label"></label>
@@ -62,16 +64,6 @@
                 <label asp-for="CompanyName" class="control-label"></label>
                 <input asp-for="CompanyName" class="form-control" />
                 <span asp-validation-for="CompanyName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TypeUser" class="control-label"></label>
-                <input asp-for="TypeUser" class="form-control" />
-                <span asp-validation-for="TypeUser" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
