--- a/crowsoftmvc/Views/DefaultFeature/Create.cshtml
+++ b/crowsoftmvc/Views/DefaultFeature/Create.cshtml
@@ -6,7 +6,8 @@
 
 <h1>Create</h1>
 
-<h4>DefaultFeature</h4>
+<h4>Building Default Feature</h4>
+<h6>Note: When you checked the Default Feature checkbox, this feature will not display to clients, but added when the quote is generated!</h6>
 <hr />
 <div class="row">
     <div class="col-md-4">
