--- a/crowsoftmvc/Views/DefaultFeature/Details.cshtml
+++ b/crowsoftmvc/Views/DefaultFeature/Details.cshtml
@@ -10,29 +10,29 @@
     <h4>DefaultFeature</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Measurement)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Measurement)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UnitPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UnitPrice)
         </dd>
-        <dt class = "col-sm-2">
+         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsDefaultFeature)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsDefaultFeature)
+        <dd class="col-sm-10">
+            @Html.CheckBoxFor(model => model.ActiveBool, new { @class = "checkbox", @disabled = "disabled" })
         </dd>
     </dl>
 </div>
