--- a/crowsoftmvc/Views/DefaultFeature/Index.cshtml
+++ b/crowsoftmvc/Views/DefaultFeature/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.UnitPrice)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsDefaultFeature)
+                @Html.CheckBoxFor(model => item.ActiveBool, new { @class = "checkbox", @disabled = "disabled" })
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdDefaultFeature">Edit</a> |
