--- a/crowsoftmvc/Views/BuildingImages/Create.cshtml
+++ b/crowsoftmvc/Views/BuildingImages/Create.cshtml
@@ -9,9 +9,10 @@
 
 <h4>BuildingImage</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="BuildingImages" asp-action="Create" method="post" enctype="multipart/form-data">
+<form asp-controller="BuildingImages" asp-action="Create" method="post" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-md-4">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
@@ -21,7 +22,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     <p>Upload one file:</p>
-                    <input type="file" name="ImagePath"/>
+                    <input type="file" name="file"  />
                 </div>
             </div>
             <div class="form-group" hidden="hidden">
@@ -32,18 +33,17 @@
 
             <div class="form-group" hidden="hidden">
                 <label asp-for="BuildingQuoteIdBuildingQuote" class="control-label" hidden="hidden"></label>
-                <input asp-for="BuildingQuoteIdBuildingQuote" class="form-control" hidden="hidden" />
-                <span asp-validation-for="BuildingQuoteIdBuildingQuote" class="text-danger" hidden="hidden"></span>
+                <select asp-for="BuildingQuoteIdBuildingQuote" class="form-control" asp-items="ViewBag.BuildingQuoteIdBuildingQuote" hidden="hidden"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-idBuildingQoute='@ViewBag.BuildingQuoteId'>Back to List</a>
 </div>
 
 @section Scripts {
