--- a/crowsoftmvc/Views/BuildingImages/Delete.cshtml
+++ b/crowsoftmvc/Views/BuildingImages/Delete.cshtml
@@ -22,6 +22,7 @@
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
         <dd class = "col-sm-10">
+
             @Html.DisplayFor(model => model.ImagePath)
         </dd>
         <dt class = "col-sm-2">
@@ -35,6 +36,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdBuildingImage" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" asp-route-idBuildingQoute='@ViewBag.BuildingQuoteId'>Back to List</a>
     </form>
 </div>
