--- a/crowsoftmvc/Views/BuildingImages/Details.cshtml
+++ b/crowsoftmvc/Views/BuildingImages/Details.cshtml
@@ -20,8 +20,8 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
+        <dd class="col-sm-10">
+            <img src="@Model.ImagePath" asp-append-version="true" alt="@Model.ImagePath" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BuildingQuoteIdBuildingQuote)
@@ -33,5 +33,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.IdBuildingImage">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-idBuildingQoute='@ViewBag.BuildingQuoteId'>Back to List</a>
 </div>
